Refactor: add "embedded" to embedded font name
So I can be sure my embedded fonts are working, and not using my system
fonts instead.

--- a/src/2-base/font-families.scss
+++ b/src/2-base/font-families.scss
@@ -9,5 +9,5 @@
     --font-monospace: "Source Code Pro", monospace;
 
     /* Biggest headings */
-    --display-heading-font: "Ibarra Real Nova", serif;
+    --display-heading-font: "Ibarra Real Nova (Embedded)", serif;
 }
