Refactor: update copyright message on Ibarra Real

--- a/src/1-resources/ibarra-real-nova.scss
+++ b/src/1-resources/ibarra-real-nova.scss
@@ -1,7 +1,11 @@
 /* Ibarra Real Nova
 ========================================================= */
 
-/* Encoded using https://transfonter.org */
+/* Copyright: Copyright 2007 The Ibarra Real Nova Project Authors (https://github.com/googlefonts/ibarrareal)
+   Licence: OFL 1.1
+   Licence URL: https://raw.githubusercontent.com/googlefonts/ibarrareal/main/OFL.txt
+   Source: https://github.com/googlefonts/ibarrareal
+   Encoder: https://transfonter.org */
 
 @font-face {
     font-weight: normal;
