Feat: headings in Cormorant

--- a/src/1-resources/ibarra-real-nova.scss
+++ b/src/1-resources/ibarra-real-nova.scss
@@ -3,7 +3,7 @@
 
 /* Copyright: Copyright 2007 The Ibarra Real Nova Project Authors (https://github.com/googlefonts/ibarrareal)
    Licence: OFL 1.1
-   Licence URL: https://raw.githubusercontent.com/googlefonts/ibarrareal/main/OFL.txt
+   Licence URL: https://github.com/googlefonts/ibarrareal/blob/main/OFL.txt
    Source: https://github.com/googlefonts/ibarrareal
    Encoder: https://transfonter.org */
 
