--- a/src/2-base/font-families.scss
+++ b/src/2-base/font-families.scss
@@ -14,6 +14,7 @@ body {
     --font-text-theme: "EB Garamond (Embedded)", serif;
     --font-text-size: 1.5em !important;
 
-    /* Biggest headings */
-    --display-heading-font: "Ibarra Real Nova (Embedded)", serif;
+    /* Headings */
+    --heading-font: "Cormorant (Embedded)", serif;
+    --h1: 2.6em; /* Source view */
 }
