--- a/src/obsidian.scss
+++ b/src/obsidian.scss
@@ -1,4 +1,5 @@
 // External resources
+@use "1-resources/cormorant.scss";
 @use "1-resources/eb-garamond.scss";
 @use "1-resources/ibarra-real-nova.scss";
 
