--- a/src/2-base/font-families.scss
+++ b/src/2-base/font-families.scss
@@ -16,5 +16,5 @@ body {
 
     /* Headings */
     --heading-font: "Cormorant (Embedded)", serif;
-    --h1: 2.6em; /* Source view */
+    --h1: 2.6em;
 }
