--- a/src/4-notes/horizontal-rule.scss
+++ b/src/4-notes/horizontal-rule.scss
@@ -10,6 +10,8 @@
     margin: 4em 5em 2em;
     border-top: solid 1px;
     color: var(--text-normal);
+    /* Let's use the hedera from Cormorant: it's prettier */
+    font-family: var(--heading-font);
     text-align: center;
 }
 
