--- a/src/4-notes/horizontal-rule.scss
+++ b/src/4-notes/horizontal-rule.scss
@@ -3,14 +3,14 @@
 
 .markdown-rendered hr,
 .markdown-source-view .hr hr {
-    /* Don't hide the top half of the character */
+    /* Don't hide the top half of the character. */
     overflow: visible;
     /* The <br> is 2em high, so add that to the bottom
     margin to get the top margin. */
     margin: 4em 5em 2em;
     border-top: solid 1px;
     color: var(--text-normal);
-    /* Let's use the hedera from Cormorant: it's prettier */
+    /* Let's use the hedera from Cormorant: it's prettier. */
     font-family: var(--heading-font);
     text-align: center;
 }
